--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: "Lexend Deca", sans-serif;
+  font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
   color: var(--white-paragraphs);
 }
