--- a/style.css
+++ b/style.css
@@ -15,8 +15,101 @@
   font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
   color: var(--white-paragraphs);
+  font-size: 15px;
 }
 
 body {
   background-color: var(--gray);
+}
+
+.main {
+  min-height: 100vh;
+  width: 100vw;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards {
+  max-width: 800px;
+  border-radius: 10px;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+  padding: 40px;
+}
+
+.sedans {
+  background-color: var(--orange);
+}
+
+.suvs {
+  background-color: var(--cyan);
+}
+
+.luxury {
+  background-color: var(--dark-cyan);
+}
+
+.icon {
+  margin-bottom: 20px;
+}
+
+.heading {
+  text-transform: uppercase;
+  font-family: "Big Shoulders Display", sans-serif;
+  font-weight: 700;
+  color: var(--gray);
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  margin-bottom: 20px;
+}
+
+.desc {
+  line-height: 1.5rem;
+  font-size: 0.8rem;
+  margin-bottom: 60px;
+}
+
+.cta {
+  padding: 10px 15px;
+  border-radius: 20px;
+  border: 1px solid var(--gray);
+  font-size: 0.8rem;
+  background-color: var(--gray);
+  cursor: pointer;
+}
+
+.orange {
+  color: var(--orange);
+  transition: all 0.5s ease-in-out;
+}
+
+.cyan {
+  color: var(--cyan);
+  transition: all 0.5s ease-in-out;
+}
+
+.dark-cyan {
+  color: var(--dark-cyan);
+  transition: all 0.5s ease-in-out;
+}
+
+.orange:hover {
+  background-color: var(--orange);
+  color: var(--gray);
+}
+
+.cyan:hover {
+  background-color: var(--cyan);
+  color: var(--gray);
+}
+
+.dark-cyan:hover {
+  background-color: var(--dark-cyan);
+  color: var(--gray);
 }
